--- a/index.html
+++ b/index.html
@@ -3,42 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        table,
-        tr,
-        th,
-        td{
-            border: 1px solid black;
-            border-collapse: collapse;
-            width: 500px;
-            text-align: center;
-        }
-        table{
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
+    <title>MERN TASKS</title>
 </head>
 <body>
-    <table>
+    <table border="5" align="center">
+        <caption>MERN FULL STACK TASKS</caption>
+        <th>TASKS</th>
+        <th>LINK</th>
         <tr>
-            <th>Task Name</th>
-            <th> Task Link</th>
+            <td>TASK1</td>
+            <td><a href="Task1.html">Link1 HTML</a></td>
         </tr>
         <tr>
-            <td>Task1</td>
-            <td><a href="task1.html">task 1 link</a></td>
+            <td>TASK2</td>
+            <td><a href="Task2.html">Link2 HTML</a></td>
         </tr>
         <tr>
-            <td>Task2</td>
-            <td><a href="task2.html">task 2 link</a></td>
+            <td>TASK3</td>
+            <td><a href="Task3.html">Link3 HTML</a></td>
         </tr>
         <tr>
-            <td>Task3</td>
-            <td><a href="task3.html">task 3 link</a></td>
+            <td>TASK4</td>
+            <td><a href="Task4.html">Link4 HTML</a></td>
         </tr>
-        
+        <tr>
+            <td>TASK5</td>
+            <td><a href="Task5.html">Link5 HTML</a></td>
+        </tr>
+        <tr>
+            <td>TASK6</td>
+            <td><a href="Task6.html">Link6 CSS</a></td>
+        </tr>
+        <tr>
+            <td>TASK7</td>
+            <td><a href="Task7.html">Link7 CSS</a></td>
+        </tr>
+        <tr>
+            <td>TASK8</td>
+            <td><a href="Task8.html">Link8 CSS</a></td>
+        </tr>
+        <tr>
+            <td>TASK9</td>
+            <td><a href="Task9.html">Link9 CSS</a></td>
+        </tr>
+        <tr>
+            <td>TASK10</td>
+            <td><a href="Task10.html">Link10 CSS</a></td>
+        </tr>
+        <tr>
+            <td>TASK11</td>
+            <td><a href="Task11.html">Link11 CSS</a></td>
+        </tr>
+        <tr>
+            <td>TASK12</td>
+            <td><a href="Task12.html">Link12 CSS</a></td>
+        </tr>
     </table>
 </body>
 </html>
