--- a/index.html
+++ b/index.html
@@ -12,51 +12,51 @@
         <th>LINK</th>
         <tr>
             <td>TASK1</td>
-            <td><a href="Task1.html">Link1 HTML</a></td>
+            <td><a href="task1.html">Link1 HTML</a></td>
         </tr>
         <tr>
             <td>TASK2</td>
-            <td><a href="Task2.html">Link2 HTML</a></td>
+            <td><a href="task2.html">Link2 HTML</a></td>
         </tr>
         <tr>
             <td>TASK3</td>
-            <td><a href="Task3.html">Link3 HTML</a></td>
+            <td><a href="task3.html">Link3 HTML</a></td>
         </tr>
         <tr>
             <td>TASK4</td>
-            <td><a href="Task4.html">Link4 HTML</a></td>
+            <td><a href="task4.html">Link4 HTML</a></td>
         </tr>
         <tr>
             <td>TASK5</td>
-            <td><a href="Task5.html">Link5 HTML</a></td>
+            <td><a href="task5.html">Link5 HTML</a></td>
         </tr>
         <tr>
             <td>TASK6</td>
-            <td><a href="Task6.html">Link6 CSS</a></td>
+            <td><a href="task6.html">Link6 CSS</a></td>
         </tr>
         <tr>
             <td>TASK7</td>
-            <td><a href="Task7.html">Link7 CSS</a></td>
+            <td><a href="task7.html">Link7 CSS</a></td>
         </tr>
         <tr>
             <td>TASK8</td>
-            <td><a href="Task8.html">Link8 CSS</a></td>
+            <td><a href="task8.html">Link8 CSS</a></td>
         </tr>
         <tr>
             <td>TASK9</td>
-            <td><a href="Task9.html">Link9 CSS</a></td>
+            <td><a href="task9.html">Link9 CSS</a></td>
         </tr>
         <tr>
             <td>TASK10</td>
-            <td><a href="Task10.html">Link10 CSS</a></td>
+            <td><a href="task10.html">Link10 CSS</a></td>
         </tr>
         <tr>
             <td>TASK11</td>
-            <td><a href="Task11.html">Link11 CSS</a></td>
+            <td><a href="task11.html">Link11 CSS</a></td>
         </tr>
         <tr>
             <td>TASK12</td>
-            <td><a href="Task12.html">Link12 CSS</a></td>
+            <td><a href="task12.html">Link12 CSS</a></td>
         </tr>
     </table>
 </body>
